sign in with emailfully working Facebook oAuth added but not working

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -7,5 +7,7 @@
   <div class="form-group">
     <input type="password" name="password" ng-model="login.credentials.password" placeholder="Password" class="form-control">
   </div>
-  <input type="submit" value="Submit" class="btn btn-primary">
+  <input type="submit" value="Submit" class="btn btn-primary"><br>
+  <button ng-click="main.authenticate('facebook')">Sign in with Facebook</button>
+   
 </form>
