trying to get markers from user locations - am able to get isers in to a places array public js controllers map js but now stuck

--- a/public/templates/users.html
+++ b/public/templates/users.html
@@ -6,6 +6,7 @@
       <img class="card-img-top" src="../images/no_image.png" alt="Profile Picture">
       <div class="card-block">
         <h4 class="card-title">{{ user.username }}</h4>
+        <h6> {{ user.locationHome}}</h6>
         <p class="card-text">{{ user.email }}</p>
       </div>
     </div>
