--- a/public/templates/users.html
+++ b/public/templates/users.html
@@ -1,13 +1,14 @@
 <h1>Users</h1>
 
 <div class="row">
-  <div class="col-sm-6 col-md-4" ng-repeat="user in users.all">
+  <div class="col-sm-6 col-md-4" ng-repeat="user in users.all" >
     <div class="card">
       <img class="card-img-top" src="../images/no_image.png" alt="Profile Picture">
       <div class="card-block">
         <h4 class="card-title">{{ user.username }}</h4>
         <h6> {{ user.locationHome}}</h6>
         <p class="card-text">{{ user.email }}</p>
+        <button ui-sref="usersShow({ id: user._id})">See More</button>
       </div>
     </div>
   </div>
