maps woring and displaying user  data in console edit not working correctly yet

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -7,7 +7,7 @@
   <div class="form-group">
     <input type="password" name="password" ng-model="login.credentials.password" placeholder="Password" class="form-control">
   </div>
-  <input type="submit" value="Submit" class="btn btn-primary"><br>
+  <input type="submit" value="Submit" class="btn btn-primary">
    
 </form>
 <button ng-click="main.authenticate('facebook')" class="btn btn-primary">Sign in with Facebook</button>
