removing token services and adding satellize for regular isgn in

--- a/public/templates/users.html
+++ b/public/templates/users.html
@@ -5,10 +5,12 @@
     <div class="card">
       <img class="card-img-top" src="../images/no_image.png" alt="Profile Picture">
       <div class="card-block">
-        <h4 class="card-title">{{ user.username }}</h4>
-        <h6> {{ user.locationHome}}</h6>
-        <p class="card-text">{{ user.email }}</p>
+        <h4 class="card-title">{{ user.username }}  {{ user.age}}</h4>
+        <h6>Lives in: {{ user.locationNameHome}}</h6>
+        <h6>Works in: {{ user.locationNameWork}}</h6>
+        <p class="card-text">{{ user.diningPreferences }}</p>
         <button ui-sref="usersShow({ id: user._id})">See More</button>
+        <button ui-sref="chat({ id: user._id})">Chat</button>
       </div>
     </div>
   </div>
