--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,1 +1,10 @@
-<h1>This is home</h1>
+<div id="chat" ng-controller="ChatController as chat">
+  <h1>Chat</h1>
+    <ul>
+      <li ng-repeat = "message in chat.all track by $index">{{message}}</li>
+    </ul>
+  <form ng-submit ="chat.sendMessage()">
+    <input type="text" ng-model="chat.message">
+    <button>Send</button>
+  </form>
+</div>
