--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -10,4 +10,4 @@
   <input type="submit" value="Submit" class="btn btn-primary">
    
 </form>
-<button ng-click="main.authenticate('facebook')" class="btn btn-primary">Sign in with Facebook</button>
+<button ng-click="login.authenticate('facebook')" class="btn btn-primary">Sign in with Facebook</button>
