--- a/public/templates/usersEdit.html
+++ b/public/templates/usersEdit.html
@@ -12,6 +12,9 @@
     <input type="email" name="emailConfirmation" class="form-control" ng-model="usersEdit.selected.emailconfirmation" placeholder="Confirm Email Address">
   </div>
   <div class="form-group">
+  <input type="file" file name="avatar" ng-model="usersEdit.selected.avatar" placeholder="Avatar">
+  </div>
+  <div class="form-group">
     <input type="text" name="locationHome" class="form-control" ng-model="usersEdit.selected.locationNameHome" >
   </div>
   <div class="form-group">
