--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -11,6 +11,10 @@
     <input type="email" name="emailConfirmation" class="form-control" ng-model="register.user.emailconfirmation" placeholder="Confirm Email Address">
   </div>
   <div class="form-group">
+  <input type="file" file name="avatar" ng-model="register.user.avatar" placeholder="Avatar">
+  </div>
+
+  <div class="form-group">
     <input type="text" name="locationHome" class="form-control" ng-model="register.user.locationNameHome" placeholder="Enter your home town or postcode">
   </div>
   <div class="form-group">
