--- a/public/templates/users.html
+++ b/public/templates/users.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-sm-6 col-md-4" ng-repeat="user in users.all" >
     <div class="card">
-      <img class="card-img-top" src="../images/no_image.png" alt="Profile Picture">
+      <img class="card-img-top" ng-src="{{ user.avatar }}" alt="Profile Picture">
       <div class="card-block">
         <h4 class="card-title">{{ user.username }}  {{ user.age}}</h4>
         <h6>Lives in: {{ user.locationNameHome}}</h6>
