--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -1,5 +1,5 @@
 <h1>Register</h1>
-
+{{register.user}}
 <form ng-submit="register.submit()">
   <div class="form-group">
     <input type="text" name="username" class="form-control" ng-model="register.user.username" placeholder="Username">
