--- a/public/templates/users.html
+++ b/public/templates/users.html
@@ -1,7 +1,7 @@
 <h1>Users</h1>
 
 <div class="row">
-  <div class="col-sm-6 col-md-4" ng-repeat="user in users.all" >
+  <div class="col-sm-6 col-md-4" ng-show=" user.loggedIn" ng-repeat="user in users.all" >
     <div class="card">
       <img class="card-img-top" ng-src="{{ user.avatar }}" alt="Profile Picture">
       <div class="card-block">
