--- a/public/templates/map.html
+++ b/public/templates/map.html
@@ -1,4 +1,5 @@
-<div>
-  <map center="main.mapCenter" markers="main.places"></map>
-  <h1>This is where the map should be</h1>
+<div class="container">
+  <div>
+    <map center="main.mapCenter" markers="main.places"></map>
+  </div>
 </div>
