--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,13 +1,18 @@
-<h1>Login</h1>
+<div class="container">
+  <h1>Login</h1>
 
-<form ng-submit="login.submit()">
-  <div class="form-group">
-    <input type="email" name="email" ng-model="login.credentials.email" placeholder="Email" class="form-control">
+  <form ng-submit="login.submit()">
+    <div class="form-group">
+      <input type="email" name="email" ng-model="login.credentials.email" placeholder="Email" class="form-control">
+    </div>
+    <div class="form-group">
+      <input type="password" name="password" ng-model="login.credentials.password" placeholder="Password" class="form-control">
+    </div>
+    <input type="submit" value="Submit" class="btn btn-primary">
+    <button ng-click="login.authenticate('facebook')" class="btn btn-primary">Sign in with Facebook</button>
+
+     
+  </form>
+  <img class="bottom-logo" ng-src=" 
+  https://s3-eu-west-1.amazonaws.com/meetoeat/meetoeat_background.png" alt="image of people in a restaurant">
   </div>
-  <div class="form-group">
-    <input type="password" name="password" ng-model="login.credentials.password" placeholder="Password" class="form-control">
-  </div>
-  <input type="submit" value="Submit" class="btn btn-primary">
-   
-</form>
-<button ng-click="login.authenticate('facebook')" class="btn btn-primary">Sign in with Facebook</button>
