ammended some typos in about text

--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -2,15 +2,15 @@
   <div id="about-content" class="container">
     <h1>Meet2Eat</h1>
     <h2>Whats this all about?...</h2>
-      <p>Have you ever been on holiday, business trip, or just out for dinner on your own? Did you take a book and feel uncomforatable being the only person reading at the table? Did you read all your twitter feed and emails and check you facbook and instagram before the starter arrived? Did you eat as fast as you could to lavebefore any more people starred at you in the 'oh dear' kind of way....<p>
+      <p>Have you ever been on holiday, business trip, or just out for dinner on your own? Did you take a book and feel uncomforatable being the only person reading at the table? Did you read all your twitter feed and emails and check your facbook and instagram before the starter arrived? Did you eat as fast as you could to leave before any more people stared at you in the 'oh dear' kind of way....<p>
 
       <p class="indent">...did you wish there was someone to have dinner with?</p>
 
-      <p>Welcome Meet2Eat, a place to meet other people who would ove to go for dinner with someone because they are in exactly the same postion as you!</p>
+      <p>Welcome to Meet2Eat, a place to meet other people who would love to go for dinner with someone like you because they are in exactly the same postion as you!</p>
 
     <h2>How does it work...</h2>
-    <p>What we didn't want to do was store lots of personal data so all you need to do is sign up with an email address, the town where you live and work, then provide an idea of the kind of things you like to do to enable us to match similar people so that hopefully conversation will be easy going. We also ask for your age but you don't have to give it! That way hipefully you will meet people of a similar age group. Finally when you want to meet up just set you preferences for when and where you would like to meet which could be home work or where ypu are that day.</p>
-    <p>Then see who else is  on line. You see everyone similar to you on a map and the oick someone to chat to. We don't store nay of you chat so when you leave the conversation it will be gone.</p>
+    <p>What we didn't want to do was store lots of personal data so all you need to do is sign up with an email address, the town where you live and work, then provide an idea of the kind of things you like to do to enable us to match similar people so that hopefully conversation will be easy going. We also ask for your age but you don't have to give it! That way hopefully you will meet people of a similar age group. Finally when you want to meet up just set your preferences for when and where you would like to meet which could be home work or where you are that day.</p>
+    <p>Then see who else is  on line. You see everyone similar to you on a map simply pick someone to chat to. We don't store any of your chat so when you leave the conversation it will be gone.</p>
     <p class="indent">...and that, as they say, is all folks!</p>   
      
   </div>
